# sgcarmart-data

./: .gitignore  README.md  common.py  constants.py  download_all_pdfs.py  main.py  pyproject.toml  test_year_navigator.py
.github/workflows/: download-pricelists.yml
data/: dealer_brand_mapping.json
sgcarmart/: __init__.py
sgcarmart/core/: __init__.py  downloader.py  scraper.py  year_navigator.py
sgcarmart/utils/: __init__.py  file_utils.py  http.py  validation.py
tests/: conftest.py
tests/integration/: test_downloader.py  test_downloader_advanced.py  test_year_navigator.py
tests/unit/: test_file_utils.py  test_http.py  test_robots_compliance.py  test_scraper.py  test_validation.py
